--- a/src/config.cfg
+++ b/src/config.cfg
@@ -1,4 +1,4 @@
-# Action53 config
+# action53.cfg
 # Copyright © 2022 zeta0134
 # 
 # Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -32,7 +32,7 @@ MEMORY {
 }
 
 SEGMENTS {
-   ZEROPAGE:  load = ZEROPAGE,  type = zp;
+   ZEROPAGE:  load = ZEROPAGE,    type = zp;
    BSS:        load = RAM,        type = bss, align = $100, define = yes;
    RAM:        load = RAM,        type = bss, start = $0300;
    HEADER:     load = HDR,        type = ro,  align = $10;
@@ -40,6 +40,7 @@ SEGMENTS {
    PRG1_8000:  load = PRG1,       type = ro,  start = $8000;
    PRG2_8000:  load = PRG2,       type = ro,  start = $8000;
    PRGFIXED_C000:  load = PRGLAST_C000,  type = ro,  start = $C000;
+   UNUSED:     load = PRGLAST_C000,  type = ro,  start = $FFD0;
    VECTORS:    load = PRGLAST_C000,  type = ro,  start = $FFFA;
 }
 
