--- a/src/config.cfg
+++ b/src/config.cfg
@@ -31,15 +31,16 @@ MEMORY {
 }
 
 SEGMENTS {
-   ZEROPAGE:  load = ZEROPAGE,    type = zp;
-   BSS:        load = RAM,        type = bss, align = $100, define = yes;
-   HEADER:     load = HDR,        type = ro,  align = $10;
-   PRG0_8000:  load = PRG0,       type = ro,  start = $8000;
-   PRG1_8000:  load = PRG1,       type = ro,  start = $8000;
-   PRG2_8000:  load = PRG2,       type = ro,  start = $8000;
-   PRGFIXED_C000:  load = PRGLAST_C000,  type = ro,  start = $C000;
-   UNUSED:     load = PRGLAST_C000,  type = ro,  start = $FFD0;
-   VECTORS:    load = PRGLAST_C000,  type = ro,  start = $FFFA;
+   ZEROPAGE:      load = ZEROPAGE,     type = zp;
+   BSS:           load = RAM,          type = bss, align = $100, define = yes;
+   HEADER:        load = HDR,          type = ro,  align = $10;
+   PRG0_8000:     load = PRG0,         type = ro,  start = $8000;
+   PRG1_8000:     load = PRG1,         type = ro,  start = $8000;
+   PRG2_8000:     load = PRG2,         type = ro,  start = $8000;
+   PRGFIXED_C000: load = PRGLAST_C000, type = ro,  start = $C000;
+   DPCM:          load = PRGLAST_C000, type = ro,  start = $C000;
+   UNUSED:        load = PRGLAST_C000, type = ro,  start = $FFD0;
+   VECTORS:       load = PRGLAST_C000, type = ro,  start = $FFFA;
 }
 
 FILES {
