add new song, fix instrument delta bias, resegment

--- a/src/config.cfg
+++ b/src/config.cfg
@@ -27,8 +27,7 @@ MEMORY {
     PRG0:      start = $8000, size = $4000, type = ro, file = %O, fill = yes, fillval = $FF, bank = $00;
     PRG1:      start = $8000, size = $4000, type = ro, file = %O, fill = yes, fillval = $FF, bank = $01;
     PRG2:      start = $8000, size = $4000, type = ro, file = %O, fill = yes, fillval = $FF, bank = $02;
-    PRGLAST_C000: start = $C000, size = $2000, type = ro, file = %O, fill = yes, fillval = $FF, bank = $03;
-    PRGLAST_E000: start = $E000, size = $2000, type = ro, file = %O, fill = yes, fillval = $FF, bank = $03;
+    PRGLAST_C000: start = $C000, size = $4000, type = ro, file = %O, fill = yes, fillval = $FF, bank = $03;
 }
 
 SEGMENTS {
@@ -41,9 +40,8 @@ SEGMENTS {
    PRGFIXED_C000: load = PRGLAST_C000, type = ro;
    DPCM:          load = PRGLAST_C000, type = ro,  align=64;
    DECOMPRESS:    load = PRGLAST_C000, type = ro;
-   PRGFIXED_E000: load = PRGLAST_E000, type = ro;
-   UNUSED:        load = PRGLAST_E000, type = ro,  start = $FFD0;
-   VECTORS:       load = PRGLAST_E000, type = ro,  start = $FFFA;
+   UNUSED:        load = PRGLAST_C000, type = ro,  start = $FFD0;
+   VECTORS:       load = PRGLAST_C000, type = ro,  start = $FFFA;
 }
 
 FILES {
