--- a/src/config.cfg
+++ b/src/config.cfg
@@ -39,7 +39,7 @@ SEGMENTS {
    PRG2_8000:     load = PRG2,         type = ro;
    PRGFIXED_C000: load = PRGLAST_C000, type = ro;
    DPCM:          load = PRGLAST_C000, type = ro,  align=64;
-   DECOMPRESS:    load = PRGLAST_C000, type = ro;
+   DECOMPRESS:    load = PRGLAST_C000, type = ro, define = yes, align = $100;
    UNUSED:        load = PRGLAST_C000, type = ro,  start = $FFD0;
    VECTORS:       load = PRGLAST_C000, type = ro,  start = $FFFA;
 }
