--- a/src/config.cfg
+++ b/src/config.cfg
@@ -22,6 +22,7 @@
 MEMORY {
     ZEROPAGE:        start = $00,   size = $100,  type = rw;
     SHADOW_OAM:       start = $0200, size = $100,  type = rw;
+	STACKRAM:  start = $0100, size = $100,  type = rw;
     RAM:       start = $0200, size = $600,  type = rw;
     HDR:       start = $0000, size = $10,   type = ro, file = %O, fill = yes;
     PRG0:      start = $8000, size = $4000, type = ro, file = %O, fill = yes, fillval = $FF, bank = $00;
@@ -32,6 +33,7 @@ MEMORY {
 
 SEGMENTS {
    ZEROPAGE:      load = ZEROPAGE,     type = zp;
+   STACKRAM:      load = STACKRAM,     type = bss, define = yes;
    BSS:           load = RAM,          type = bss, align = $100, define = yes;
    HEADER:        load = HDR,          type = ro,  align = $10;
    PRG0_8000:     load = PRG0,         type = ro;
