Begin to implement credits data

--- a/src/config.cfg
+++ b/src/config.cfg
@@ -32,18 +32,19 @@ MEMORY {
 }
 
 SEGMENTS {
-   ZEROPAGE:      load = ZEROPAGE,     type = zp;
-   STACKRAM:      load = STACKRAM,     type = bss, define = yes;
-   BSS:           load = RAM,          type = bss, align = $100, define = yes;
-   HEADER:        load = HDR,          type = ro,  align = $10;
-   PRG0_8000:     load = PRG0,         type = ro;
-   PRG1_8000:     load = PRG1,         type = ro;
-   PRG2_8000:     load = PRG2,         type = ro;
-   PRGFIXED_C000: load = PRGLAST_C000, type = ro;
-   DPCM:          load = PRGLAST_C000, type = ro,  align=64;
-   DECOMPRESS:    load = PRGLAST_C000, type = ro, define = yes, align = $100;
-   UNUSED:        load = PRGLAST_C000, type = ro,  start = $FFD0;
-   VECTORS:       load = PRGLAST_C000, type = ro,  start = $FFFA;
+   ZEROPAGE:         load = ZEROPAGE,     type = zp;
+   STACKRAM:         load = STACKRAM,     type = bss, define = yes;
+   BSS:              load = RAM,          type = bss, align = $100, define = yes;
+   HEADER:           load = HDR,          type = ro,  align = $10;
+   PRG0_8000:        load = PRG0,         type = ro;
+   PRG1_8000:        load = PRG1,         type = ro;
+   PRG2_8000:        load = PRG2,         type = ro;
+   PRGFIXED_C000:    load = PRGLAST_C000, type = ro;
+   PRG_CREDITS_LIST: load = PRGLAST_C000, type = ro;
+   DPCM:             load = PRGLAST_C000, type = ro,  align=64;
+   DECOMPRESS:       load = PRGLAST_C000, type = ro, define = yes, align = $100;
+   UNUSED:           load = PRGLAST_C000, type = ro,  start = $FFD0;
+   VECTORS:          load = PRGLAST_C000, type = ro,  start = $FFFA;
 }
 
 FILES {
